<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Registro Scolastico Android v0.9-alpha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Roberto Della Grotta vi da il benvenuto su</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="title">Registro Scolastico Android v0.9-alpha</string>
    <string name="programmer">di Roberto Della Grotta</string>
    <string name="registeredUser">Utente Registrato</string>
    <string name="newUser">Registra Nuovo Utente</string>
    <string name="title_activity_register_user">Registra Nuovo Utente</string>
    <string name="checkSound">Sound ON/OFF</string>

    <color name="colorBlue">#0000ff</color>

    <string name="loginText">Login</string>
    <string name="emailText">Email:</string>
    <string name="passwdText">Password:</string>

    <color name="colorRed">#ff0000</color>

    <string name="loginMsg">login message</string>
    <string name="home">Home</string>
    <string name="registerUserText">Iscrizione</string>
    <string name="newuser_button">Registra</string>
    <string name="repeatPasswordText">Ripeti Password:</string>
    <string name="cognomeText">Cognome:</string>
    <string name="nomeText">Nome:</string>
    <string name="registerMessage">Esito Registrazione</string>
    <string name="vaiAlLogin">Vai al Login</string>
    <string name="title_activity_splash">Splash</string>
    <string name="emailHint">Email</string>
    <string name="passwdHint">Password</string>
    <string name="nomeHint">Nome</string>
    <string name="cognomeHint">Cognome</string>
    <string name="repeatPasswdHint">Ripeti Password</string>
    <string name="author">di Roberto Della Grotta</string>
    <string name="authorEmail">keyorchestra2014@gmail.com</string>
    <string name="startNow">Salta presentazione</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_data">Questioning activity</string>
    <string name="title_activity_openedclass">Anwering acitvity</string>

    <color name="colorStart">#008080</color>
    <color name="colorOrange">#f4a50c</color>
    <color name="colorCyan">#1eecf4</color>
    <color name="colorGrey">#c3d3d3</color>

    <string name="KEY_BACKGROUNDCOLOR_TAG">1</string>

    <color name="colorBlack">#000000</color>

    <string name="title_activity_table_list_exp">TableListExpActivity</string>
    <string name="title_activity_admin_tables">Amm. Tabelle</string>
    <string name="spinner_fieldtype">Type of Field</string>
    <string name="title_activity_android_tab_layout">AndroidTabLayoutActivity</string>
    <string name="DATABASE_ASSETS_PATH">/data/data/it.keyorchestra.registrowebapp/databases/</string>
    <string name="rangeSelectionOk">Conferma Selezione</string>
    <string name="rangeSelecionCancel">Cancella Selezione</string>
    <string name="title_activity_where_clause">WhereClause</string>
    <string name="title_activity_choose_fields_for_select">ChooseFieldsForSelect</string>

    <color android:id="@+id/color1" name="colorNavy" android:layout_width="wrap_content" android:layout_height="wrap_content">#000084</color>

    <string name="keyorchestra">Key Orchestra</string>

    <color android:id="@+id/color1" name="colorListItem" android:layout_width="wrap_content" android:layout_height="wrap_content">#d1cab0</color>

    <string android:id="@+id/string1" name="iconDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">icon</string>
    <string name="cambiaRuolo">Scegli Ruolo</string>
    <string name="ruoloText">Ruoli Utente</string>
    <string android:id="@+id/string1" name="activitiesText" android:layout_width="wrap_content" android:layout_height="wrap_content">Moduli Registro Scolastico</string>
    <string android:id="@+id/string1" name="ruoliUtentiDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">Vai a scelta ruolo</string>
    <string android:id="@+id/string1" name="appVersion" android:layout_width="wrap_content" android:layout_height="wrap_content">Versione per Android OS 4.4.2 - api 19</string>
    <string android:id="@+id/string1" name="databaseText" android:layout_width="wrap_content" android:layout_height="wrap_content">Databases &amp; Params</string>
    <string android:id="@+id/string1" name="aboutUs" android:layout_width="wrap_content" android:layout_height="wrap_content">Autore</string>
    <string android:id="@+id/string1" name="mysqlAndroidTest" android:layout_width="wrap_content" android:layout_height="wrap_content">MySQL&lt;=&gt;Android</string>
    <string android:id="@+id/string1" name="preferences" android:layout_width="wrap_content" android:layout_height="wrap_content">Preferenze</string>
    <string android:id="@+id/string1" name="exit" android:layout_width="wrap_content" android:layout_height="wrap_content">Uscita</string>
    <string name="pgsqlAndroidTest">PostgreSql&lt;=&gt;Android</string>
    <string name="showMenu">Mostra il Menù</string>
    <string name="ruoloScelto">Ruolo:</string>
    <string android:id="@+id/string1" name="reconnect_to_mysql" android:layout_width="wrap_content" android:layout_height="wrap_content">Riconnetti a MySQL</string>
    <string name="fillFieldsDescription">Riempi i campi con i dati dell\'amministratore</string>
    <string name="loginButtonDescription">Effettua il Login</string>
    <string name="mysql">MySQL</string>
    <string name="postgresql">PostgreSql</string>
    <string name="sqlite">SqLite</string>
    <string name="connection_wait">In attesa di connessione al database!</string>
    <string name="connection_fail">Connessione fallita!</string>
    <string name="connection_success">Connessione stabilita con il database!</string>
    <string android:id="@+id/string1" name="gotoRegisterDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">Vai alla pagina di Iscrizione</string>
    <string android:id="@+id/string1" name="wipeOutDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">Cancella tutti i dati inseriti</string>
    <string android:id="@+id/string1" name="registraDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">Esegue l\'iscrizione al Registro Scolastico</string>
    <string android:id="@+id/string1" name="gotoLoginDescription" android:layout_width="wrap_content" android:layout_height="wrap_content">Vai alla pagina di Login</string>
    <string name="userMenuText">Menù</string>
    <string name="ibLogoutDescription">Effettua il Logout dal Registro Scolastico</string>
    <string name="ibIsAdminDescription">Mostra l\'icona dell\'ADMIN o di un semplice utente</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="ibEmailDescription">Pagina per le Email</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="ibChangePasswordDescription">Cambio Password</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="ibUsersPasswordDescription">Cambio password altri utenti</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="gestisciDatiUtenti">Gestione informazioni altri utenti</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="othersPasswdHint">Pass Utenti</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="othersData">Gestione Utenti</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="now">24-11-2014</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="ruoliOptionsDescription">Accede alle attività del Ruolo indicato</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="addRuolo">Aggiunge ruolo a utente</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="removeRuolo">Rimuove dal ruolo l\'utente</string>
    <string name="newPasswdHint">Nuova Password</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="newPasswdText">Nuova Password:</string>
    <string name="spinnerPasswdReqPrompt">Selezionare la richiesta Nuova Password da elaborare</string>
    <string name="impostaNuovaPassword">Imposta Nuova Password</string>
    <string name="generaPassword">Genera Passoword</string>
    <string name="rilascioNuovePassword">Nuova Password</string>
    <string name="forgotPasswdDescription">Hai dimenticato la Password?</string>
    <string name="requestConfirmed">Confermate</string>
    <string name="requestPending">In attesa</string>
    <string name="graphTitle">Grafici</string>
    <string name="graficiStatistici">Grafici per Statistiche Database</string>
    <string name="noGraphMessage">Nessun dato nel periodo Selezionato</string>
    <string name="connMese">Conn./Mese</string>
    <string name="connGiorno">Conn./Giorno</string>
    <string name="lineChart">Line Chart</string>
    <string name="barChart">Bar Chart</string>
    <string name="graphview_description">GraphView</string>
    <string name="mysql_description">MySQL</string>
    <string name="postgresql_description">PostgreSQL</string>
    <string name="sqlite_description">SQLite</string>
    <string name="phpmyadmin_description">phpMyAdmin</string>
    <string name="phpmailer_description">PHPMAILER</string>
    <string name="php_description">PHP</string>
    <string name="spinnerViewPeriodTitle">Periodi LOG</string>
    <string name="spinnerSceltaGraficoTitle">Scelta Dati</string>
    <string name="spinnerTipiGraficoTitle">Tipo Grafico</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="adminOptions">Opzioni per il ruolo: </string>

</resources>