<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="25dp"
    tools:context=".Login" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/registerUserText"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRepeatPassword"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/nomeHint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCognome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/editTextNome"
        android:ems="10"
        android:hint="@string/cognomeHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextCognome"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:ems="10"
        android:hint="@string/passwdHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:ems="10"
        android:hint="@string/repeatPasswdHint"
        android:inputType="textPassword"
        android:textSize="32sp" />

    <Button
        android:id="@+id/registra_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextRepeatPassword"
        android:layout_below="@+id/editTextRepeatPassword"
        android:gravity="center"
        android:text="@string/newuser_button"
        android:textColor="@color/colorBlue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/messageEsitoRegistrazione"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRepeatPassword"
        android:layout_below="@+id/registra_button"
        android:text="@string/registerMessage"
        android:textColor="@color/colorRed"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold" />

</RelativeLayout>