<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/application_background"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvRilascioTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="18sp" 
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRilascioTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/textView2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold" />

	<TextView
	    android:id="@+id/programmer"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/title"
	    android:layout_centerVertical="true"
	    android:gravity="center"
	    android:text="@string/programmer"
	    android:textSize="18sp"
	    android:textColor="@color/colorBlue"	 
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/programmer"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:text="@string/title"
	    android:textSize="32sp"
	    android:textColor="@color/colorBlue"
	    android:textStyle="bold" />

	<Button
	    android:id="@+id/registeredUser"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/programmer"
	    android:layout_below="@+id/programmer"
	    android:gravity="center"
	    android:text="@string/registeredUser"
	    android:textSize="25sp" />

	<Button
	    android:id="@+id/newUser"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/registeredUser"
	    android:layout_below="@+id/registeredUser"
	    android:gravity="center"
	    android:text="@string/newUser"
	    android:textSize="25sp" />
	
</RelativeLayout>